--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href="youssefboughizane.github.io/cours.pdf" target="_blank">PDF.</a>
+<a href="youssefboughizane.github.io/Cours.pdf" target="_blank">PDF.</a>
